# ganymede-app

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  biome.jsonc  components.json  index.html  lefthook.yml  lingui.config.ts  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.changeset/: 0000-customizable-shortcuts-ui.md  0000-default-lang-filter-download.md  0000-mode-offline.md  0000-recent-guides-profile-aware.md  0000-wakfu-support.md  0000-whitelist-youtu-be.md  0001-backup-conf-on-reset.md  0001-copy-quest-name-from-summary.md  0001-ignore-setup-summary-order.md  0001-jwt-expiry.md  0002-comteharebourg-whitelist.md  0002-guide-display.md  0002-sync-progress.md  0002-theming-system.md  0003-gentle-onions-repeat.md  0003-guide-ux-improvements.md  0003-image-viewer-windows.md  0003-shift-scroll-step.md  0004-guide-tabs-context-menu.md  0004-step-perf.md  0004-welcome-onboarding.md  0005-edit-profile-name.md  0005-linux-webkitgtk-fixes.md  0005-step-note.md  0005-switch-profile-recent-guides.md  (+64 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: image-viewer.json  main.json
src-tauri/src/: almanax.rs  analytics.rs  api.rs  base.rs  conf.rs  deep_link.rs  dofusdb.rs  event.rs  first_start.rs  guides.rs  image.rs  image_viewer.rs  item.rs  json.rs  lib.rs  main.rs  notifications.rs  oauth.rs  overlay.rs  pinned_guides.rs  quest.rs  report.rs  security.rs  shortcut.rs  step_notes.rs  sync.rs  tauri_api_ext.rs  update.rs  user.rs  window_manager.rs
(+244 files in other folders)
