[package]
name = "ganymede"
version = "1.14.0"
description = "Dofus Ganymede app."
authors = ["Kiyozz"]
edition = "2021"
links = "https://ganymede-app.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ganymede_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
uuid = { version = "1.16.0", features = ["v6", "fast-rng"] }
tauri = { version = "2.7.0", features = ["macos-private-api"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.1"
serde_path_to_error = "0.1.17"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
glob = "0.3.2"
chrono = "0.4.40"
semver = "1.0.26"
tauri-plugin-os = "2.3.0"
tauri-plugin-sentry = "0.2"
thiserror = "2.0.12"
tauri-plugin-log = "2.6.0"
log = "0.4.26"
taurpc = { version = "0.5.1" }
tauri-plugin-opener = "2.4.0"
chrono-tz = "0.10.1"
scraper = "0.23.1"
tauri-plugin-deep-link = "2"
regex = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.0"
machine-uid = "0.5.3"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
